--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -2,26 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>ChatGPT</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="manifest" href="/manifest.json" />
     <meta property="og:title" content="ChatGPT" />
     <meta
       property="og:image"
-      content="https://openai.com/content/images/2022/11/ChatGPT.jpg"
+      content="https://chat.openai.com/images/chatgpt-share-og.png"
     />
     <meta
       property="og:description"
       content="A conversational AI system that listens, learns, and challenges"
     />
     <meta property="og:url" content="https://chat.openai.com" />
-    <title></title>
+    <meta name="apple-itunes-app" content="app-id=6448311069" />
     <meta name="next-head-count" content="8" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="preconnect" href="https://cdn.openai.com" />
     <link
       rel="preload"
       href="/fonts/soehne/soehne-buch.woff2"
@@ -48,25 +49,22 @@
     />
     <link
       rel="preload"
-      href="/_next/static/css/0ba7ad504b2624b8.css"
+      href="/_next/static/css/996070739669fa02.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/0ba7ad504b2624b8.css"
+      href="/_next/static/css/996070739669fa02.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
-    <script>
-      window.__pandora_sentry={{.pandora_sentry}};window.__api_prefix='{{.api_prefix}}';
-    </script>
     <script
       defer=""
       nomodule=""
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-347e5b868a9f07a5.js"
+      src="/_next/static/chunks/webpack-fd789443a37219b4.js"
       defer=""
     ></script>
     <script
@@ -74,15 +72,11 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/main-2f10fecca4c74462.js"
+      src="/_next/static/chunks/main-35ce5aa6f4f7a906.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/app-16b8642aca9f7fea.js"
-      defer=""
-    ></script>
-    <script
-      src="/_next/static/chunks/bd26816a-981e1ddc27b37cc6.js"
+      src="/_next/static/chunks/pages/_app-9da3a86dda1fd226.js"
       defer=""
     ></script>
     <script
@@ -98,24 +92,32 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/588-439179c71d396f90.js"
-      defer=""
-    ></script>
-    <script src="/_next/static/chunks/58-107b19eac1b472e5.js" defer=""></script>
-    <script
-      src="/_next/static/chunks/734-f1cef41ade2ec244.js"
+      src="/_next/static/chunks/bd26816a-981e1ddc27b37cc6.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/index-bb8fda2bb300c73d.js"
+      src="/_next/static/chunks/692-a1e5a91f2cd1f1d0.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/MYarkpkg17PeZHlffaxc-/buildManifest1.js"
+      src="/_next/static/chunks/337-ca5c0dfd257a45dd.js"
+      defer=""
+    ></script>
+    <script src="/_next/static/chunks/97-fe1a753ab6370247.js" defer=""></script>
+    <script
+      src="/_next/static/chunks/734-6e0dad93566964a7.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/MYarkpkg17PeZHlffaxc-/ssgManifest.js"
+      src="/_next/static/chunks/pages/index-f958c221c1c019c5.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_buildManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -145,24 +147,33 @@
           } catch (e) {}
         })();
       </script>
-      <div></div>
       <div class="overflow-hidden w-full h-full relative flex z-0">
         <div class="relative flex h-full max-w-full flex-1 overflow-hidden">
           <div class="flex h-full max-w-full flex-1 flex-col">
             <main
-              class="relative h-full w-full transition-width flex flex-col overflow-hidden items-stretch flex-1"
+              class="relative h-full w-full transition-width flex flex-col overflow-auto items-stretch flex-1"
             >
               <div
-                class="absolute z-10 hidden flex-col gap-2 md:flex right-3 top-3"
+                class="absolute right-4 top-2 z-10 hidden flex-col gap-2 md:flex"
               ></div>
               <div class="flex-1 overflow-hidden"></div>
               <div
-                class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
+                class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:-left-2"
               >
                 <div
                   class="px-3 pb-3 pt-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-4 md:pb-6 md:pt-3"
                 >
-   
+                  <span
+                    >Free Research Preview. ChatGPT may produce inaccurate
+                    information about people, places, or facts.
+                    <a
+                      href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
+                      target="_blank"
+                      rel="noreferrer"
+                      class="underline"
+                      >ChatGPT May 24 Version</a
+                    ></span
+                  >
                 </div>
               </div>
             </main>
@@ -172,25 +183,37 @@
       <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
     <script id="__NEXT_DATA__" type="application/json">
-      {{.props}}
-    </script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function () {
-          navigator.serviceWorker
-            .register("/service-worker.js", { scope: "/" })
-            .then(
-              function (reg) {
-                console.log(
-                  "ServiceWorker registration successful with scope: ",
-                  reg.scope
-                );
-              },
-              function (e) {
-                console.log("ServiceWorker registration failed: ", e);
-              }
-            );
-        });
+      {
+        "props": {
+          "pageProps": {
+            "user": {
+              "id": "user-admin",
+              "name": "admin@openai.com",
+              "email": "admin@openai.com",
+              "image": "https://s.gravatar.com/avatar/e3602eeb8e3136bf37808604da5ba1d6?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fcn.png",
+              "picture": "https://s.gravatar.com/avatar/e3602eeb8e3136bf37808604da5ba1d6?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fcn.png",
+              "idp": "auth0",
+              "iat": 1686547816,
+              "mfa": false,
+              "groups": [],
+              "intercom_hash": "f4ded2c9ed2ba48edf71cea6c54a290a865faed484eb07c4e663c90c00a66f65"
+            },
+            "serviceStatus": {},
+            "userCountry": "JP",
+            "geoOk": true,
+            "serviceAnnouncement": { "paid": {}, "public": {} },
+            "isUserInCanPayGroup": true,
+            "_sentryTraceData": "2c7abeeda337446d91a6c6803fa854d5-bc6c437ace9a4733-1",
+            "_sentryBaggage": "sentry-environment=production,sentry-release=a00c212125a866c00416cc8d3374446fcb7b6a84,sentry-transaction=%2F,sentry-public_key=33f79e998f93410882ecec1e57143840,sentry-trace_id=2c7abeeda337446d91a6c6803fa854d5,sentry-sample_rate=1"
+          },
+          "__N_SSP": true
+        },
+        "page": "/",
+        "query": { "model": "text-davinci-002-render-sha" },
+        "buildId": "T0w-XLEbe3GlQjlsVRsTP",
+        "isFallback": false,
+        "gssp": true,
+        "scriptLoader": []
       }
     </script>
   </body>
