--- a/resource/template/detail.html
+++ b/resource/template/detail.html
@@ -1,43 +1,165 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charSet="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="manifest" href="/manifest.json">
+  <head>
+    <meta charset="utf-8" />
+    <title>ChatGPT</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <meta property="og:title" content="ChatGPT" />
-    <meta property="og:image" content="https://openai.com/content/images/2022/11/ChatGPT.jpg" />
-    <meta property="og:description" content="A conversational AI system that listens, learns, and challenges" />
+    <meta
+      property="og:image"
+      content="https://chat.openai.com/images/chatgpt-share-og.png"
+    />
+    <meta
+      property="og:description"
+      content="A conversational AI system that listens, learns, and challenges"
+    />
     <meta property="og:url" content="https://chat.openai.com" />
-    <meta name="next-head-count" content="7" />
+    <meta name="apple-itunes-app" content="app-id=6448311069" />
+    <meta name="next-head-count" content="8" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="preload" href="/fonts/soehne/soehne-buch.woff2" as="font" crossorigin="" />
-    <link rel="preload" href="/fonts/soehne/soehne-halbfett.woff2" as="font" crossorigin="" />
-    <link rel="preload" href="/fonts/soehne/soehne-mono-buch.woff2" as="font" crossorigin="" />
-    <link rel="preload" href="/fonts/soehne/soehne-mono-halbfett.woff2" as="font" crossorigin="" />
-    <link rel="preload" href="/_next/static/css/0ba7ad504b2624b8.css" as="style" />
-    <link rel="stylesheet" href="/_next/static/css/0ba7ad504b2624b8.css" data-n-g="" /><noscript
-        data-n-css=""></noscript>
-    <script>window.__pandora_sentry =false; window.__api_prefix = '{{.api_prefix}}';</script>
-    <script defer="" nomodule="" src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"></script>
-    <script src="/_next/static/chunks/webpack-347e5b868a9f07a5.js" defer=""></script>
-    <script src="/_next/static/chunks/framework-e23f030857e925d4.js" defer=""></script>
-    <script src="/_next/static/chunks/main-2f10fecca4c74462.js" defer=""></script>
-    <script src="/_next/static/chunks/pages/app-16b8642aca9f7fea.js" defer=""></script>
-    <script src="/_next/static/chunks/pages/c/%5BchatId%5D-ec4e8336fb15f89f.js" defer=""></script>
-    <script src="/_next/static/MYarkpkg17PeZHlffaxc-/buildManifest1.js" defer=""></script>
-    <script src="/_next/static/MYarkpkg17PeZHlffaxc-/ssgManifest.js" defer=""></script>
-</head>
-
-<body class="antialiased">
+    <link rel="preconnect" href="https://cdn.openai.com" />
+    <link
+      rel="preload"
+      href="/fonts/soehne/soehne-buch.woff2"
+      as="font"
+      crossorigin=""
+    />
+    <link
+      rel="preload"
+      href="/fonts/soehne/soehne-halbfett.woff2"
+      as="font"
+      crossorigin=""
+    />
+    <link
+      rel="preload"
+      href="/fonts/soehne/soehne-mono-buch.woff2"
+      as="font"
+      crossorigin=""
+    />
+    <link
+      rel="preload"
+      href="/fonts/soehne/soehne-mono-halbfett.woff2"
+      as="font"
+      crossorigin=""
+    />
+    <link
+      rel="preload"
+      href="/_next/static/css/996070739669fa02.css"
+      as="style"
+    />
+    <link
+      rel="stylesheet"
+      href="/_next/static/css/996070739669fa02.css"
+      data-n-g=""
+    />
+    <noscript data-n-css=""></noscript>
+    <script
+      defer=""
+      nomodule=""
+      src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
+    ></script>
+    <script
+      src="/_next/static/chunks/webpack-fd789443a37219b4.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/framework-e23f030857e925d4.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/main-35ce5aa6f4f7a906.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/pages/_app-9da3a86dda1fd226.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/pages/c/%5BchatId%5D-7859583cbe9ad3da.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_buildManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_ssgManifest.js"
+      defer=""
+    ></script>
+  </head>
+  <body class="antialiased">
     <div id="__next">
-        <script>!function () { try { var d = document.documentElement, c = d.classList; c.remove('light', 'dark'); var e = localStorage.getItem('theme'); if ('system' === e || (!e && true)) { var t = '(prefers-color-scheme: dark)', m = window.matchMedia(t); if (m.media !== t || m.matches) { d.style.colorScheme = 'dark'; c.add('dark') } else { d.style.colorScheme = 'light'; c.add('light') } } else if (e) { c.add(e || '') } if (e === 'light' || e === 'dark') d.style.colorScheme = e } catch (e) { } }()</script>
-        <div class="absolute left-0 right-0 top-0 z-[2]"></div>
+      <script>
+        !(function () {
+          try {
+            var d = document.documentElement,
+              c = d.classList;
+            c.remove("light", "dark");
+            var e = localStorage.getItem("theme");
+            if ("system" === e || (!e && true)) {
+              var t = "(prefers-color-scheme: dark)",
+                m = window.matchMedia(t);
+              if (m.media !== t || m.matches) {
+                d.style.colorScheme = "dark";
+                c.add("dark");
+              } else {
+                d.style.colorScheme = "light";
+                c.add("light");
+              }
+            } else if (e) {
+              c.add(e || "");
+            }
+            if (e === "light" || e === "dark") d.style.colorScheme = e;
+          } catch (e) {}
+        })();
+      </script>
+      <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
-    <script id="__NEXT_DATA__" type="application/json">{{.props}}</script>
-    <script>if ('serviceWorker' in navigator) { window.addEventListener('load', function () { navigator.serviceWorker.register('/service-worker.js', { scope: '/' }).then(function (reg) { console.log('ServiceWorker registration successful with scope: ', reg.scope); }, function (e) { console.log('ServiceWorker registration failed: ', e); }); }); }</script>
-</body>
-
+    <script id="__NEXT_DATA__" type="application/json">
+{{.props}}
+    </script>
+    <!-- <script>
+      (function () {
+        var js =
+          "window['__CF$cv$params']={r:'7d8544386a10af6d',m:'nFxxvuuwtwH7DPEujNhNaWqDRu78tCrbQ8yV4JLEKD8-1686941720-0-ATj9RINzYS0M2Xn/pYG6geydt7G/yXwWm+Z6oJG1PYk+'};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/invisible.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";
+        var _0xh = document.createElement("iframe");
+        _0xh.height = 1;
+        _0xh.width = 1;
+        _0xh.style.position = "absolute";
+        _0xh.style.top = 0;
+        _0xh.style.left = 0;
+        _0xh.style.border = "none";
+        _0xh.style.visibility = "hidden";
+        document.body.appendChild(_0xh);
+        function handler() {
+          var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;
+          if (_0xi) {
+            var _0xj = _0xi.createElement("script");
+            _0xj.nonce = "";
+            _0xj.innerHTML = js;
+            _0xi.getElementsByTagName("head")[0].appendChild(_0xj);
+          }
+        }
+        if (document.readyState !== "loading") {
+          handler();
+        } else if (window.addEventListener) {
+          document.addEventListener("DOMContentLoaded", handler);
+        } else {
+          var prev = document.onreadystatechange || function () {};
+          document.onreadystatechange = function (e) {
+            prev(e);
+            if (document.readyState !== "loading") {
+              document.onreadystatechange = prev;
+              handler();
+            }
+          };
+        }
+      })();
+    </script> -->
+  </body>
 </html>
