更新适配code插件

--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -187,9 +187,9 @@
         "props": {
           "pageProps": {
             "user": {
-              "id": "user-admin",
-              "name": "admin@openai.com",
-              "email": "admin@openai.com",
+              "id": "user-HUagcZWRoCLaYBjUWal6Ax9b",
+              "name": "cnlidong@me.com",
+              "email": "cnlidong@me.com",
               "image": "https://s.gravatar.com/avatar/e3602eeb8e3136bf37808604da5ba1d6?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fcn.png",
               "picture": "https://s.gravatar.com/avatar/e3602eeb8e3136bf37808604da5ba1d6?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fcn.png",
               "idp": "auth0",
@@ -214,25 +214,6 @@
         "isFallback": false,
         "gssp": true,
         "scriptLoader": []
-      }
-    </script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function () {
-          navigator.serviceWorker
-            .register("/service-worker.js", { scope: "/" })
-            .then(
-              function (reg) {
-                console.log(
-                  "ServiceWorker registration successful with scope: ",
-                  reg.scope
-                );
-              },
-              function (e) {
-                console.log("ServiceWorker registration failed: ", e);
-              }
-            );
-        });
       }
     </script>
   </body>
