--- a/resource/template/detail.html
+++ b/resource/template/detail.html
@@ -49,12 +49,12 @@
     />
     <link
       rel="preload"
-      href="/_next/static/css/996070739669fa02.css"
+      href="/_next/static/css/29b1eb48bbd0fef8.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/996070739669fa02.css"
+      href="/_next/static/css/29b1eb48bbd0fef8.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
@@ -64,7 +64,7 @@
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-fd789443a37219b4.js"
+      src="/_next/static/chunks/webpack-fa117e61bb9c0646.js"
       defer=""
     ></script>
     <script
@@ -76,19 +76,19 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/_app-9da3a86dda1fd226.js"
+      src="/_next/static/chunks/pages/_app-b2ac725b208f2161.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/c/%5BchatId%5D-7859583cbe9ad3da.js"
+      src="/_next/static/chunks/pages/c/%5BchatId%5D-f5225e7483c086c9.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_buildManifest.js"
+      src="/_next/static/CGRk_Om_aEGLXXSCuMmxw/_buildManifest.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_ssgManifest.js"
+      src="/_next/static/CGRk_Om_aEGLXXSCuMmxw/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -123,43 +123,7 @@
     <script id="__NEXT_DATA__" type="application/json">
 {{.props}}
     </script>
-    <!-- <script>
-      (function () {
-        var js =
-          "window['__CF$cv$params']={r:'7d8544386a10af6d',m:'nFxxvuuwtwH7DPEujNhNaWqDRu78tCrbQ8yV4JLEKD8-1686941720-0-ATj9RINzYS0M2Xn/pYG6geydt7G/yXwWm+Z6oJG1PYk+'};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/invisible.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";
-        var _0xh = document.createElement("iframe");
-        _0xh.height = 1;
-        _0xh.width = 1;
-        _0xh.style.position = "absolute";
-        _0xh.style.top = 0;
-        _0xh.style.left = 0;
-        _0xh.style.border = "none";
-        _0xh.style.visibility = "hidden";
-        document.body.appendChild(_0xh);
-        function handler() {
-          var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;
-          if (_0xi) {
-            var _0xj = _0xi.createElement("script");
-            _0xj.nonce = "";
-            _0xj.innerHTML = js;
-            _0xi.getElementsByTagName("head")[0].appendChild(_0xj);
-          }
-        }
-        if (document.readyState !== "loading") {
-          handler();
-        } else if (window.addEventListener) {
-          document.addEventListener("DOMContentLoaded", handler);
-        } else {
-          var prev = document.onreadystatechange || function () {};
-          document.onreadystatechange = function (e) {
-            prev(e);
-            if (document.readyState !== "loading") {
-              document.onreadystatechange = prev;
-              handler();
-            }
-          };
-        }
-      })();
-    </script> -->
+    <script>
+
   </body>
 </html>
