--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -49,12 +49,12 @@
     />
     <link
       rel="preload"
-      href="/_next/static/css/996070739669fa02.css"
+      href="/_next/static/css/29b1eb48bbd0fef8.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/996070739669fa02.css"
+      href="/_next/static/css/29b1eb48bbd0fef8.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
@@ -64,7 +64,7 @@
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-fd789443a37219b4.js"
+      src="/_next/static/chunks/webpack-fa117e61bb9c0646.js"
       defer=""
     ></script>
     <script
@@ -76,7 +76,7 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/_app-9da3a86dda1fd226.js"
+      src="/_next/static/chunks/pages/_app-b2ac725b208f2161.js"
       defer=""
     ></script>
     <script
@@ -88,36 +88,47 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/68a27ff6-a453fd719d5bf767.js"
+      src="/_next/static/chunks/68a27ff6-b1db347c50639918.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/bd26816a-981e1ddc27b37cc6.js"
+      src="/_next/static/chunks/2802bd5f-15923fb46be55b45.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/692-a1e5a91f2cd1f1d0.js"
+      src="/_next/static/chunks/bd26816a-7ae54dd3357d90b4.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/337-ca5c0dfd257a45dd.js"
-      defer=""
-    ></script>
-    <script src="/_next/static/chunks/97-fe1a753ab6370247.js" defer=""></script>
-    <script
-      src="/_next/static/chunks/734-6e0dad93566964a7.js"
+      src="/_next/static/chunks/984-1278472924e49180.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/index-f958c221c1c019c5.js"
+      src="/_next/static/chunks/653-4cb05ee80f77e17d.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_buildManifest.js"
+      src="/_next/static/chunks/597-ed3dbaa450c308e5.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/T0w-XLEbe3GlQjlsVRsTP/_ssgManifest.js"
+      src="/_next/static/chunks/496-cb3e2b679437e27d.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/709-33cf407bcca55d8c.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/pages/index-5b58f27ddbccf6fb.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/CGRk_Om_aEGLXXSCuMmxw/_buildManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/CGRk_Om_aEGLXXSCuMmxw/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -158,7 +169,7 @@
               ></div>
               <div class="flex-1 overflow-hidden"></div>
               <div
-                class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:-left-2"
+                class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:pl-2 md:w-[calc(100%-.5rem)]"
               >
                 <div
                   class="px-3 pb-3 pt-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-4 md:pb-6 md:pt-3"
@@ -180,6 +191,17 @@
           </div>
         </div>
       </div>
+      <div
+        role="region"
+        aria-label="Notifications (F8)"
+        tabindex="-1"
+        style="pointer-events: none"
+      >
+        <ol
+          tabindex="-1"
+          class="z-100 fixed bottom-0 right-0 m-0 flex max-w-[100vw] list-none flex-col gap-[10px] p-[var(--viewport-padding)] outline-none [--viewport-padding:_25px]"
+        ></ol>
+      </div>
       <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
     <script id="__NEXT_DATA__" type="application/json">
@@ -187,30 +209,30 @@
         "props": {
           "pageProps": {
             "user": {
-              "id": "user-HUagcZWRoCLaYBjUWal6Ax9b",
-              "name": "cnlidong@me.com",
-              "email": "cnlidong@me.com",
-              "image": "https://s.gravatar.com/avatar/e3602eeb8e3136bf37808604da5ba1d6?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fcn.png",
-              "picture": "https://s.gravatar.com/avatar/e3602eeb8e3136bf37808604da5ba1d6?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fcn.png",
+              "id": "user-l9a9yaKfKkewRmr1qslsIWox",
+              "name": "liudezheng@xyhelper.net",
+              "email": "liudezheng@xyhelper.net",
+              "image": "https://s.gravatar.com/avatar/8d1ea978b07ef45dbcea90e0d3850b74?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fli.png",
+              "picture": "https://s.gravatar.com/avatar/8d1ea978b07ef45dbcea90e0d3850b74?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fli.png",
               "idp": "auth0",
-              "iat": 1686547816,
+              "iat": 1688986573,
               "mfa": false,
               "groups": [],
-              "intercom_hash": "f4ded2c9ed2ba48edf71cea6c54a290a865faed484eb07c4e663c90c00a66f65"
+              "intercom_hash": "64182181dc973d2ac2674518708d96645e557265b81edeb86629e0434ce398a2"
             },
             "serviceStatus": {},
             "userCountry": "JP",
             "geoOk": true,
             "serviceAnnouncement": { "paid": {}, "public": {} },
             "isUserInCanPayGroup": true,
-            "_sentryTraceData": "2c7abeeda337446d91a6c6803fa854d5-bc6c437ace9a4733-1",
-            "_sentryBaggage": "sentry-environment=production,sentry-release=a00c212125a866c00416cc8d3374446fcb7b6a84,sentry-transaction=%2F,sentry-public_key=33f79e998f93410882ecec1e57143840,sentry-trace_id=2c7abeeda337446d91a6c6803fa854d5,sentry-sample_rate=1"
+            "_sentryTraceData": "38fed0d4c0aa4a668a6f718921df3675-8317d8abce6b255b-1",
+            "_sentryBaggage": "sentry-environment=production,sentry-release=aaee83c4c66706e2c64719140f382c433eb33ebf,sentry-transaction=%2F,sentry-public_key=33f79e998f93410882ecec1e57143840,sentry-trace_id=38fed0d4c0aa4a668a6f718921df3675,sentry-sample_rate=1"
           },
           "__N_SSP": true
         },
         "page": "/",
-        "query": { "model": "text-davinci-002-render-sha" },
-        "buildId": "T0w-XLEbe3GlQjlsVRsTP",
+        "query": { "model": "gpt-4-code-interpreter" },
+        "buildId": "CGRk_Om_aEGLXXSCuMmxw",
         "isFallback": false,
         "gssp": true,
         "scriptLoader": []
