修复默认模型BUG，恢复远程加载模型

--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -231,7 +231,7 @@
           "__N_SSP": true
         },
         "page": "/",
-        "query": { "model": "gpt-4-code-interpreter" },
+        "query": { "model": "text-davinci-002-render-sha" },
         "buildId": "CGRk_Om_aEGLXXSCuMmxw",
         "isFallback": false,
         "gssp": true,
