--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -4,21 +4,28 @@
     <meta charset="utf-8" />
     <title>ChatGPT</title>
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
+      name="title"
+      content="ChatGPT: Get instant answers, find inspiration, learn something new"
     />
-    <meta property="og:title" content="ChatGPT" />
     <meta
-      property="og:image"
-      content="https://chat.openai.com/images/chatgpt-share-og.png"
+      name="keywords"
+      content="ai chat,ai,chap gpt,chat gbt,chat gpt 3,chat gpt login,chat gpt website,chat gpt,chat gtp,chat openai,chat,chatai,chatbot gpt,chatg,chatgpt login,chatgpt,gpt chat,open ai,openai chat,openai chatgpt,openai"
     />
     <meta
       property="og:description"
       content="A conversational AI system that listens, learns, and challenges"
     />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="ChatGPT" />
+    <meta
+      property="og:image"
+      content="https://chat.openai.com/images/chatgpt-share-og.png"
+    />
     <meta property="og:url" content="https://chat.openai.com" />
     <meta name="apple-itunes-app" content="app-id=6448311069" />
-    <meta name="next-head-count" content="8" />
+    <meta name="next-head-count" content="12" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -49,12 +56,12 @@
     />
     <link
       rel="preload"
-      href="/_next/static/css/29b1eb48bbd0fef8.css"
+      href="/_next/static/css/c8a4ec226dd6b8e1.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/29b1eb48bbd0fef8.css"
+      href="/_next/static/css/c8a4ec226dd6b8e1.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
@@ -64,7 +71,7 @@
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-fa117e61bb9c0646.js"
+      src="/_next/static/chunks/webpack-ebbb6fe12690a0cf.js"
       defer=""
     ></script>
     <script
@@ -72,19 +79,11 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/main-35ce5aa6f4f7a906.js"
+      src="/_next/static/chunks/main-0438431c68fbeb27.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/_app-b2ac725b208f2161.js"
-      defer=""
-    ></script>
-    <script
-      src="/_next/static/chunks/1f110208-cda4026aba1898fb.js"
-      defer=""
-    ></script>
-    <script
-      src="/_next/static/chunks/012ff928-bcfa62e3ac82441c.js"
+      src="/_next/static/chunks/pages/_app-1fb29c81a8f25dfc.js"
       defer=""
     ></script>
     <script
@@ -100,35 +99,47 @@
       defer=""
     ></script>
     <script
+      src="/_next/static/chunks/1f110208-cda4026aba1898fb.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/012ff928-bcfa62e3ac82441c.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/753-dd39befb4785e26d.js"
+      defer=""
+    ></script>
+    <script
       src="/_next/static/chunks/984-1278472924e49180.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/653-4cb05ee80f77e17d.js"
+      src="/_next/static/chunks/401-422aac07f756c1be.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/597-ed3dbaa450c308e5.js"
+      src="/_next/static/chunks/190-d7cd0733e02de5ff.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/496-cb3e2b679437e27d.js"
+      src="/_next/static/chunks/937-36e251f389e9e752.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/709-33cf407bcca55d8c.js"
+      src="/_next/static/chunks/412-d7b7161e288bfc24.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/index-5b58f27ddbccf6fb.js"
+      src="/_next/static/chunks/pages/index-a129dd98622ef01d.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/CGRk_Om_aEGLXXSCuMmxw/_buildManifest.js"
+      src="/_next/static/8TObkIccovI1-nluVgBpN/_buildManifest.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/CGRk_Om_aEGLXXSCuMmxw/_ssgManifest.js"
+      src="/_next/static/8TObkIccovI1-nluVgBpN/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -164,9 +175,6 @@
             <main
               class="relative h-full w-full transition-width flex flex-col overflow-auto items-stretch flex-1"
             >
-              <div
-                class="absolute right-4 top-2 z-10 hidden flex-col gap-2 md:flex"
-              ></div>
               <div class="flex-1 overflow-hidden"></div>
               <div
                 class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:pl-2 md:w-[calc(100%-.5rem)]"
@@ -182,7 +190,7 @@
                       target="_blank"
                       rel="noreferrer"
                       class="underline"
-                      >ChatGPT May 24 Version</a
+                      >ChatGPT July 20 Version</a
                     ></span
                   >
                 </div>
@@ -205,38 +213,8 @@
       <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
     <script id="__NEXT_DATA__" type="application/json">
-      {
-        "props": {
-          "pageProps": {
-            "user": {
-              "id": "user-l9a9yaKfKkewRmr1qslsIWox",
-              "name": "liudezheng@xyhelper.net",
-              "email": "liudezheng@xyhelper.net",
-              "image": "https://s.gravatar.com/avatar/8d1ea978b07ef45dbcea90e0d3850b74?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fli.png",
-              "picture": "https://s.gravatar.com/avatar/8d1ea978b07ef45dbcea90e0d3850b74?s=480\u0026r=pg\u0026d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fli.png",
-              "idp": "auth0",
-              "iat": 1688986573,
-              "mfa": false,
-              "groups": [],
-              "intercom_hash": "64182181dc973d2ac2674518708d96645e557265b81edeb86629e0434ce398a2"
-            },
-            "serviceStatus": {},
-            "userCountry": "JP",
-            "geoOk": true,
-            "serviceAnnouncement": { "paid": {}, "public": {} },
-            "isUserInCanPayGroup": true,
-            "_sentryTraceData": "38fed0d4c0aa4a668a6f718921df3675-8317d8abce6b255b-1",
-            "_sentryBaggage": "sentry-environment=production,sentry-release=aaee83c4c66706e2c64719140f382c433eb33ebf,sentry-transaction=%2F,sentry-public_key=33f79e998f93410882ecec1e57143840,sentry-trace_id=38fed0d4c0aa4a668a6f718921df3675,sentry-sample_rate=1"
-          },
-          "__N_SSP": true
-        },
-        "page": "/",
-        "query": { "model": "text-davinci-002-render-sha" },
-        "buildId": "CGRk_Om_aEGLXXSCuMmxw",
-        "isFallback": false,
-        "gssp": true,
-        "scriptLoader": []
-      }
+{{.props}}
     </script>
+
   </body>
 </html>
