--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -223,5 +223,24 @@
     <script id="__NEXT_DATA__" type="application/json">
       {{.props}}
     </script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker
+            .register("/service-worker.js", { scope: "/" })
+            .then(
+              function (reg) {
+                console.log(
+                  "ServiceWorker registration successful with scope: ",
+                  reg.scope
+                );
+              },
+              function (e) {
+                console.log("ServiceWorker registration failed: ", e);
+              }
+            );
+        });
+      }
+    </script>
   </body>
 </html>
